microservices/rabbitmq/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rabbitmq
  namespace: remus
spec:
  host: rabbitmq-remus.apps.ocp.mylab.test
  port:
    targetPort: http
  to:
    kind: Service
    name: rabbitmq
    weight: 100
  wildcardPolicy: None
